--- a/GC/oracle - Java Garbage Collection2.ipynb
+++ b/GC/oracle - Java Garbage Collection2.ipynb
@@ -143,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. 下次minor gc, 同样的事情发生在eden区, 未引用的对象从eden区中删除, 但是存在引用的对象会被移动到第二个survivor空间(s1,其age从0变为1); 此外, 上次minor gc移动到s0的对象, 将被移动到s1, 且其age增加1. 一旦所有对象都移动到s1, s0和eden区都会变成空的, 但是请注意, survivor区的对象的age不一样    \n",
+    "* 3.下次minor gc, 同样的事情发生在eden区, 未引用的对象从eden区中删除, 但是存在引用的对象会被移动到第二个survivor空间(s1,其age从0变为1); 此外, 上次minor gc移动到s0的对象, 将被移动到s1, 且其age增加1. 一旦所有对象都移动到s1, s0和eden区都会变成空的, 但是请注意, survivor区的对象的age不一样    \n",
     "\n",
     "<img src='img/pro2.png' width='60%' height='60%' align='left'>"
    ]
@@ -152,8 +152,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. 再下次minor gc, 同样的处理流程触发, 但survivor空间切换, 存在引用的对象会被移动到s0, s1和eden区会被清空\n",
-    "5. 如下图所示, 每次monor gc,当存活对象的age到达一个阈值后(图中的阈值为8), 幸存对象将从青年代被提升到老年代(被称为promotion)  \n",
+    "* 4.再下次minor gc, 同样的处理流程触发, 但survivor空间切换, 存在引用的对象会被移动到s0, s1和eden区会被清空\n",
+    "* 5.如下图所示, 每次monor gc,当存活对象的age到达一个阈值后(图中的阈值为8), 幸存对象将从青年代被提升到老年代(被称为promotion)  \n",
     "\n",
     "<img src='img/pro3.png' width='60%' height='60%' align='left'>"
    ]
@@ -162,8 +162,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. 随着minor gc的不断发生, 越来越多的对象被提升(promotion)到老年代  \n",
-    "7. 随着青年代不断的至=执行上述整个流程, 最终触发老年代的major gc. 老年代中, 未被引用的对象将被清除, 存在引用的对象将被压缩到老年代的一端(clean up and compact)  \n",
+    "* 6.随着minor gc的不断发生, 越来越多的对象被提升(promotion)到老年代  \n",
+    "* 7.随着青年代不断的至=执行上述整个流程, 最终触发老年代的major gc. 老年代中, 未被引用的对象将被清除, 存在引用的对象将被压缩到老年代的一端(clean up and compact)  \n",
     "\n",
     "<img src='img/pro4.png' width='60%' height='60%' align='left'>"
    ]
