--- a/Yarn/2-Yarn调度.ipynb
+++ b/Yarn/2-Yarn调度.ipynb
@@ -35,7 +35,7 @@
     "* 支持资源抢占\n",
     "\n",
     "#### 多类型资源调度\n",
-    "* [采用RDF算法](https://cs.stanford.edu/~matei/papers/2011/nsdi_drf.pdf)"
+    "* [采用DRF算法](https://cs.stanford.edu/~matei/papers/2011/nsdi_drf.pdf)"
    ]
   },
   {
@@ -98,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
