--- a/Yarn/3 - Fair Scheduler 调度器.ipynb
+++ b/Yarn/3 - Fair Scheduler 调度器.ipynb
@@ -19,6 +19,7 @@
    "metadata": {},
    "source": [
     "#### 二. Steady share计算方法\n",
+    "* Steady share, 是根据权重,最大资源,最小资源的配置, 计算出的期望这个队列能从集群中获得多少资源\n",
     "* 首先来定义一个概念: 加权公平性 `(weighted fair sharing)`在`max share`和`min share`存在的情况下.   \n",
     "如果没有`max share`和`min share`, 加权平均的意思为:对于所有queue, 其单位资源是相等的, 即$$单位资源=\\frac{queue分到的资源  }{queue配置的权重}$$但是, 当有了`max share`和`min share`后, 每个queue分到的资源可能会比`max share`还大或者比`min share`还小, 这个问题需要被解决  \n",
     "[To understand what this method does, we must first define what weighted fair sharing means in the presence of min and max shares. If there were no minimum or maximum shares, then weighted fair sharing would be achieved if the ratio of slotsAssigned / weight was equal for each Schedulable and all slots were assigned. Minimum and maximum shares add a further twist - Some Schedulables may have a min share higher than their assigned share or a max share lower than their assigned share.]()"
