--- a/Spark/3-GraphFrame.ipynb
+++ b/Spark/3-GraphFrame.ipynb
@@ -618,11 +618,123 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### $\\S$3. Graph algorithms\n",
+    "#### 3.1 Connected components"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "g = GraphFrame(v:[id: string, name: string ... 1 more field], e:[src: string, dst: string ... 1 more field])\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GraphFrame(v:[id: string, name: string ... 1 more field], e:[src: string, dst: string ... 1 more field])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import org.graphframes.{examples,GraphFrame}\n",
+    "sc.setCheckpointDir(\"/tmp/test\")\n",
+    "val g: GraphFrame = examples.Graphs.friends  // get example graph\n",
+    "\n",
+    "// val result = g.connectedComponents.run()\n",
+    "// result.select(\"id\", \"component\").orderBy(\"component\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+---+------------+\n",
+      "|src|dst|relationship|\n",
+      "+---+---+------------+\n",
+      "|  a|  b|      friend|\n",
+      "|  b|  c|      follow|\n",
+      "|  c|  b|      follow|\n",
+      "|  f|  c|      follow|\n",
+      "|  e|  f|      follow|\n",
+      "|  e|  d|      friend|\n",
+      "|  d|  a|      friend|\n",
+      "|  a|  e|      friend|\n",
+      "+---+---+------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "g.edges.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+------------+\n",
+      "| id|   component|\n",
+      "+---+------------+\n",
+      "|  g|146028888064|\n",
+      "|  f|412316860416|\n",
+      "|  b|412316860416|\n",
+      "|  a|412316860416|\n",
+      "|  c|412316860416|\n",
+      "|  d|412316860416|\n",
+      "|  e|412316860416|\n",
+      "+---+------------+\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "result = [id: string, name: string ... 2 more fields]\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[id: string, name: string ... 2 more fields]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val result = g.connectedComponents.run()\n",
+    "result.select(\"id\", \"component\").orderBy(\"component\").show()"
+   ]
   }
  ],
  "metadata": {
