--- a/GC/Java Diagnostic Tools/1-jfr.ipynb
+++ b/GC/Java Diagnostic Tools/1-jfr.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 一. Introduction\n",
     "#### 1. java诊断工具依据功能分为4类\n",
     "* `事后诊断`:   用于在程序崩溃宕掉后进行诊断\n",
     "* `进程挂起`:   用于发现挂起或死锁的线程\n",
@@ -26,18 +27,46 @@
     "           * 一般的侧写记录: 运行次数最多的方法, 创建对象对多的类\n",
     "           * 找到一个类, 使用越来越多的内存, 直到内存泄漏\n",
     "           * 查找因同步问题而导致的瓶颈\n",
-    "           \n",
-    "#### 4. jcmd\n",
-    "* jcmd用于发送诊断命令请求到jvm, 这些请求能控制产生java飞行记录(java flight recording)\n",
-    "* jcmd需要使用和被诊断的java应用在同一台机器, 使用相同的用户名和组名\n"
+    "* 启动参数加上如下, 允许采集jfr\n",
+    "```shell\n",
+    " -XX:+UnlockCommercialFeatures -XX:+FlightRecorder\n",
+    "```\n",
+    "* 重点菜单栏\n",
+    "    * `code | hot method` : 热点方法   \n",
+    "    如下热点方法, List的indexof方法    \n",
+    "    <img src=\"../img/hotmethod.png\">\n",
+    "    \n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "* `Event | Graph` : 图示线程事件(wait,block,running,sleep)   \n",
+    "如下事件, 多个线程频繁处于等待状态  \n",
+    "<img src=\"../img/event.png.2\">\n",
+    "The moral of this exercise is that bad synchronization can and will kill the performance and responsiveness of your application."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* `Memory | Garbage Collections` : 有关gc频次,gc前后堆大小  \n",
+    "如下图一, gc频繁发生;  \n",
+    "如下图二, `allocator`标签, 显示了快表中存储的地址最多的类, 查看调用链, 是`Allocator.go()`方法初始化了整数数组\n",
+    "<img src=\"../img/gc.png\">    \n",
+    "图1\n",
+    "<img src=\"../img/allocator.png.2\">   \n",
+    "图2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* `Exeption`"
+   ]
   }
  ],
  "metadata": {
@@ -56,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
