--- a/GC/oracle - Java Garbage Collection2.ipynb
+++ b/GC/oracle - Java Garbage Collection2.ipynb
@@ -217,7 +217,8 @@
     "    * Java 7 - Parallel GC\n",
     "    * Java 8 - Parallel GC\n",
     "    * Java 9 - G1 GC\n",
-    "    * Java 10 - G1 GC"
+    "    * Java 10 - G1 GC\n",
+    "* [JVM启动参数](https://www.baeldung.com/jvm-parameters)"
    ]
   }
  ],
@@ -237,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
