--- a/GC/Java Diagnostic Tools/2-jcmd.ipynb
+++ b/GC/Java Diagnostic Tools/2-jcmd.ipynb
@@ -99,15 +99,114 @@
     "    file.encoding=ISO-8859-1\n",
     "    ...\n",
     "    ...\n",
-    "    ```"
+    "    ```\n",
+    "    * 打印出所有JVM flag\n",
+    "    ```shell\n",
+    "    > jcmd 3492 VM.flags\n",
+    "    3492:\n",
+    "    -XX:CICompilerCount=15 -XX:+FlightRecorder -XX:InitialHeapSize=2113929216 -XX:MaxHeapSize=32210157568 -XX:MaxNewSize=10736369664 -XX:MinHeapDeltaBytes=524288 -XX:NativeMemoryTracking=detail -XX:NewSize=704643072 -XX:OldSize=1409286144 -XX:+UnlockCommercialFeatures -XX:+UseCompressedClassPointers -XX:+UseCompressedOops -XX:+UseFastUnorderedTimeStamps -XX:+UseParallelGC\n",
+    "    ```\n",
+    "    * 打印类的直方图  \n",
+    "    包括内部引用的类和应用自身的类, 产生对象占用内存最多的类放在顶部, 后面按照内存占用大小降序排列    \n",
+    "    该命令同 `jmap -histo <pid>`, 但jcmd是推荐使用的 \n",
+    "    ```jcmd\n",
+    "> jcmd 3492 GC.class_histogram > class.histogram\n",
+    "> vim class.histogram\n",
+    "3492:\n",
+    "num     #instances         #bytes  class name\n",
+    "1:         13966        1055192  [C\n",
+    "2:          4423         492200  java.lang.Class\n",
+    "3:         13941         334584  java.lang.String\n",
+    "4:           990         313512  [B\n",
+    "5:             7         229488  [Lakka.dispatch.forkjoin.ForkJoinTask;\n",
+    "6:          5928         189696  java.util.concurrent.ConcurrentHashMap$Node\n",
+    "7:          2543         144800  [Ljava.lang.Object;\n",
+    "8:          2482          79424  java.util.HashMap$Node\n",
+    "9:          4311          68976  java.lang.Object\n",
+    "10:          1578          64904  [I\n",
+    "11:           448          57176  [Ljava.util.HashMap$Node;\n",
+    "12:            48          47584  [Ljava.util.concurrent.ConcurrentHashMap$Node;\n",
+    "13:           391          34408  java.lang.reflect.Method\n",
+    "14:           637          25480  java.util.TreeMap$Entry\n",
+    "15:           540          21600  java.util.LinkedHashMap$Entry\n",
+    "16:           413          21008  [Ljava.lang.String;\n",
+    "17:            99          19800  com.sun.org.apache.xerces.internal.impl.dv.xs.XSSimpleTypeDecl\n",
+    "```\n",
+    "    * heap dump文件\n",
+    "    heap dumo出来的堆信息文件, 可用mat工具生成堆栈信息报告\n",
+    "    ```jcmd\n",
+    "    > jcmd 3492 GC.heap_dump 2492.dump\n",
+    "3492:\n",
+    "Heap dump file created\n",
+    "    ```\n",
+    "    * 打印所有线程栈\n",
+    "    ```shell\n",
+    "    > jcmd 3492 Thread.print\n",
+    "    3492:\n",
+    "    2019-06-16 13:15:28\n",
+    "    Full thread dump Java HotSpot(TM) 64-Bit Server VM (25.102-b14 mixed mode):\n",
+    "\n",
+    "    \"VM JFR Buffer Thread\" #33 daemon prio=5 os_prio=0 tid=0x00007f6088b7b800 nid=0x9730 waiting on condition [0x0000000000000000]\n",
+    "       java.lang.Thread.State: RUNNABLE\n",
+    "\n",
+    "    \"JFR request timer\" #31 daemon prio=9 os_prio=0 tid=0x00007f6088a44000 nid=0x961a in Object.wait() [0x00007f6158c8d000]\n",
+    "       java.lang.Thread.State: WAITING (on object monitor)\n",
+    "        at java.lang.Object.wait(Native Method)\n",
+    "        at java.lang.Object.wait(Object.java:502)\n",
+    "        at java.util.TimerThread.mainLoop(Timer.java:526)\n",
+    "        - locked <0x0000000080227d48> (a java.util.TaskQueue)\n",
+    "        at java.util.TimerThread.run(Timer.java:505)\n",
+    "\n",
+    "    \"Attach Listener\" #30 daemon prio=9 os_prio=0 tid=0x00007f60f0001000 nid=0x2971 waiting on condition [0x0000000000000000]\n",
+    "       java.lang.Thread.State: RUNNABLE\n",
+    "\n",
+    "    \"process reaper\" #29 daemon prio=10 os_prio=0 tid=0x00007f60a0017800 nid=0x2936 waiting on condition [0x00007f61f4043000]\n",
+    "       java.lang.Thread.State: TIMED_WAITING (parking)\n",
+    "        at sun.misc.Unsafe.park(Native Method)\n",
+    "        - parking to wait for  <0x0000000080220690> (a java.util.concurrent.SynchronousQueue$TransferStack)\n",
+    "        at java.util.concurrent.locks.LockSupport.parkNanos(LockSupport.java:215)\n",
+    "        at java.util.concurrent.SynchronousQueue$TransferStack.awaitFulfill(SynchronousQueue.java:460)\n",
+    "        at java.util.concurrent.SynchronousQueue$TransferStack.transfer(SynchronousQueue.java:362)\n",
+    "        at java.util.concurrent.SynchronousQueue.poll(SynchronousQueue.java:941)\n",
+    "        at java.util.concurrent.ThreadPoolExecutor.getTask(ThreadPoolExecutor.java:1066)\n",
+    "        at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1127)\n",
+    "        at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:617)\n",
+    "        at java.lang.Thread.run(Thread.java:745)\n",
+    "    ```\n",
+    "    "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "5. 使用jcmd记录jfr\n",
+    "    * 开启jfr  \n",
+    "    * 检查jfr是否记录完毕\n",
+    "    如下持续记录jvm2分钟的飞行记录\n",
+    "    ```jcmd\n",
+    "    > jcmd 3492 JFR.start name=myrecording delay=20s duration=2m filename=myrecording.jfr\n",
+    "    3492:\n",
+    "    Recording 2 scheduled to start in 20 s. The result will be written to:\n",
+    "\n",
+    "    /home/work/liujie32/test_jar/myrecording.jfr\n",
+    "    > jcmd 3492 JFR.check\n",
+    "    3492:\n",
+    "    Recording: recording=1 name=\"MyRecording\" duration=2m filename=\"myrecording.jfr\" compress=false (stopped)\n",
+    "\n",
+    "    Recording: recording=2 name=\"myrecording\" duration=2m filename=\"myrecording.jfr\" compress=false (stopped)\n",
+    "    ```\n",
+    "    * 立即创建一个jfr dump  \n",
+    "    这回停止相同name的jfr行为, 并将jfr立刻dump到指定文件\n",
+    "    ```jcmd\n",
+    "    > jcmd 3492 JFR.dump name=myrecording filename=myrecording2.jfr\n",
+    "    3492:\n",
+    "    Dumped recording \"myrecording\", 206.7 kB written to:\n",
+    "\n",
+    "    /home/work/liujie32/test_jar/myrecording2.jfr\n",
+    "    ```\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
