--- a/GC/Java Diagnostic Tools/1-jfr.ipynb
+++ b/GC/Java Diagnostic Tools/1-jfr.ipynb
@@ -65,7 +65,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* `Exeption`"
+    "* `Exception`   \n",
+    "    jfr能记录异常抛出的次数, 记录是哪个类抛出的异常; 并通过添加操作项, 在event-log中\"只显示操作集\"来追踪抛出异常时的调用栈\n",
+    "    * `Exception - code`查看抛出了多少次异常, 都是什么异常  \n",
+    "    <img src='../img/exception1.png'>\n",
+    "    * `Event-log-Show only operative set.`查看异常调用\n",
+    "    <img src='../img/exception2.png'>"
    ]
   }
  ],
