--- a/Java Parallel program/Java并发编程实践/5-构建基础模块.ipynb
+++ b/Java Parallel program/Java并发编程实践/5-构建基础模块.ipynb
@@ -26,23 +26,35 @@
    "source": [
     "#### 二. Synchronized\n",
     "1. Synchronized使用方法  \n",
-    " 1. 关键字在方法上: \n",
-    "   ```java\n",
-    "   public synchronized void method(){}\n",
-    "   ```\n",
-    " 2. 关键字在方法内的同步代码块\n",
-    "   ```java\n",
-    "   public synchronized void method(Object obj){\n",
-    "       ...\n",
-    "       synchronzied(obj){ }\n",
-    "       ...\n",
-    "    }\n",
-    "   ```\n",
-    " 3. 关键字在静态方法上   \n",
-    "  关键字在静态方法上, 相当于锁加到当前Class上, 所有对该方法的调用, 都要先获得该Class的锁\n",
-    "  ```java\n",
-    "    public synchronized static void method(Object obj){}\n",
-    "  ```\n",
+    " 1. **类级别的锁**  (所有同步针对该类的所有对象)\n",
+    "    1. 同步静态方法   \n",
+    "    同步静态方法是类级别的锁，一旦任何一个线程进入这个方法，其他所有线程将无法访问这个类的任何同步类锁的方法。\n",
+    "        ```java\n",
+    "        public synchronized static void fun() { }\n",
+    "        ```\n",
+    "    2. 同步代码块锁类  \n",
+    "    下面提供了两种同步类的方法，锁住效果和同步静态方法一样，都是类级别的锁，同时只有一个线程能访问带有同步类锁的方法。\n",
+    "        ```java\n",
+    "        private void fun() {\n",
+    "            synchronized (this.getClass()) { }\n",
+    "        }\n",
+    "        ```\n",
+    "    \n",
+    " 2. **对象计别的锁** (所有同步只针对同一个对象)\n",
+    "    1. 同步普通方法\n",
+    "        ```java\n",
+    "        public synchronized void fun() { }\n",
+    "        ```\n",
+    "    2. 同步代码块中使用this对象/其它对象作为锁\n",
+    "        ```java\n",
+    "        public void fun() {\n",
+    "            synchronized (this) { }\n",
+    "        }\n",
+    "\n",
+    "        public void fun() {\n",
+    "            synchronized (LOCK) { }\n",
+    "        }\n",
+    "        ```\n",
     "2. synchronized与wait,notify合用  \n",
     " 单一的synchronized虽然可以保证线程安全, 但需要配合其它线程方法, 才能表示复杂逻辑的线程交互  \n",
     " 1. `obj.wait()`  \n",
@@ -63,7 +75,9 @@
     "   当等待在obj上的线程收到一个`obj.notify()`时, 就能重新获得obj的锁.值得注意的是以下3点 :  \n",
     "    1. 当线程执行完`obj.notify()`后, 不会立刻释放锁, 而是等待synchronized代码块中的代码全部执行完毕后再释放锁  \n",
     "    2. 如果有多个线程在方法`obj.wait()`中, 则只会随机选择一个线程唤醒  \n",
-    "    3. `obj.notifyAll()`会唤醒所有在执行`obj.wait()`的线程"
+    "    3. `obj.notifyAll()`会唤醒所有在执行`obj.wait()`的线程\n",
+    " 3. `Thread.sleep`    \n",
+    "  sleep方法会让线程休眠, 但不会释放已获得的锁 "
    ]
   },
   {
@@ -623,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
