--- a/Java Parallel program/Java并发编程实践/15-原子变量与非阻塞同步机制.ipynb
+++ b/Java Parallel program/Java并发编程实践/15-原子变量与非阻塞同步机制.ipynb
@@ -26,7 +26,7 @@
     "        1. 先获取新栈顶top.next\n",
     "        2. 更新top指针, 若top和获取top.next时的top一样, 说明获取新栈顶的操作没发生其他操作, 则cas更新top  \n",
     "        \n",
-    "<img src=\"img/concurrentStack.png\" width=\"83%\">\n",
+    "<img src=\"img/concurrentStack.PNG\" width=\"83%\">\n",
     "\n",
     "#### 4.2 **非阻塞的队列**\n",
     "1. 难度更大的非阻塞队列  \n",
@@ -47,11 +47,11 @@
     "     2. 不存在另一个线程执行更新操作:  \n",
     "         先后完成自己的2个指针的更新操作, tail.next和tail指针的更新  \n",
     "         \n",
-    "<img src=\"img/concurrentLinkedQueue.png\">\n",
+    "<img src=\"img/concurrentLinkedQueue.PNG\">\n",
     "\n",
     "3. JDK的ConcurrentLinkedQueue中的算法   \n",
     " JDK的ConcurrentLinkedQueue中的算有一个改进是: 并未使用原子引用 AtomicReference<Node<E>> 表示每个Node, 而是使用普通的volatile类型引用, 并通过基于反射的 AtomicReferenceFieldUpdater 来更新next引用.使用这个方法更新有点繁琐, 但完全是为了提升性能  \n",
-    "    <img src=\"img/atomicReferenceFieldUpdater.png\" width=\"80%\">"
+    "    <img src=\"img/atomicReferenceFieldUpdater.PNG\" width=\"80%\">"
    ]
   }
  ],
