--- a/Spark/spark工程打包/Spark打包方法.ipynb
+++ b/Spark/spark工程打包/Spark打包方法.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "### 二. Maven打包\n",
     "\n",
-    "#### 1. pom.xml定义以来,shade打包插件\n",
+    "#### 1. pom.xml定义依赖,shade打包插件\n",
     "```xml\n",
     "\n",
     "<properties>\n",
@@ -143,7 +143,7 @@
     "            </configuration>\n",
     "        </plugin>\n",
     "\n",
-    "        <!--shade打包,指定加入那些以来到jar包中-->\n",
+    "        <!--shade打包,指定加入那些依赖到jar包中-->\n",
     "        <plugin>\n",
     "            <groupId>org.apache.maven.plugins</groupId>\n",
     "            <artifactId>maven-shade-plugin</artifactId>\n",
